opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/of_json"
bug-reports: "https://github.com/janestreet/of_json/issues"
dev-repo: "git+https://github.com/janestreet/of_json.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/of_json/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "core_extended"
  "jsonaf"
  "ppx_jane"
  "dune"          {>= "3.11.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A friendly applicative interface for Jsonaf."
description: "
This library provides an applicative interface for extracting values from JSON objects with an emphasis on readability and error handling, particularly with nested values.
"
